# wayne-os

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
src/platform2/: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gn  .isort.cfg  CPPLINT.cfg  OWNERS  PRESUBMIT.cfg  PRESUBMIT.py  README.md  navbar.md  unblocked_terms.txt
src/platform2/arc/: DIR_METADATA  OWNERS
src/platform2/attestation/: BUILD.gn  OWNERS  attestation_testrunner.cc
src/platform2/authpolicy/: BUILD.gn  OWNERS  README.md  anonymizer.cc  anonymizer.h  anonymizer_test.cc  auth_data_cache.cc  auth_data_cache.h  auth_data_cache_test.cc  authpolicy.cc  authpolicy.h  authpolicy_flags.cc  authpolicy_flags.h  authpolicy_flags_test.cc  authpolicy_main.cc  authpolicy_metrics.cc  authpolicy_metrics.h  authpolicy_parser_main.cc  constants.cc  constants.h  cryptohome_client.cc  cryptohome_client.h  gpo_version_cache.cc  gpo_version_cache.h  gpo_version_cache_test.cc  jail_helper.cc  jail_helper.h  log_colors.cc  log_colors.h  path_service.cc  path_service.h  platform_helper.cc  platform_helper.h  process_executor.cc  process_executor.h  process_executor_test.cc  samba_helper.cc  samba_helper.h  samba_helper_test.cc  samba_interface.cc  (+12 more)
src/platform2/avtest_label_detect/: Makefile  OWNERS  README.chromiumos  avtest_label_detect.conf  detect_hw_video_acc.c  detect_hw_video_prot.c  detect_resolution.c  label_detect.h  main.c  table_lookup.c  util.c  util_v4l2.c  util_vaapi.c
src/platform2/biod/: BUILD.gn  DIR_METADATA  OWNERS  README.md  auth_stack_manager.h  biod_config.cc  biod_config.h  biod_config_test.cc  biod_constants.h  biod_crypto.cc  biod_crypto.h  biod_crypto_test.cc  biod_crypto_test_data.h  biod_crypto_validation_value_fuzzer.cc  biod_export.h  biod_metrics.cc  biod_metrics.h  biod_metrics_test.cc  biod_storage.cc  biod_storage.h  biod_storage_fuzzer.cc  biod_storage_test.cc  biod_system.cc  biod_system.h  biod_system_test.cc  biod_version.h  biometrics_daemon.cc  biometrics_daemon.h  biometrics_manager.h  biometrics_manager_record.h  biometrics_manager_wrapper.cc  biometrics_manager_wrapper.h  biometrics_manager_wrapper_test.cc  cros_fp_auth_stack_manager.cc  cros_fp_auth_stack_manager.h  cros_fp_auth_stack_manager_test.cc  cros_fp_biometrics_manager.cc  cros_fp_biometrics_manager.h  cros_fp_biometrics_manager_test.cc  cros_fp_device.cc  (+40 more)
src/platform2/bootid-logger/: BUILD.gn  OWNERS  README.md  bootid_logger.cc  bootid_logger.h  bootid_logger_fuzzer.cc  bootid_logger_test.cc  constants.h  log-bootid-on-boot.conf  main.cc  timestamp_util.cc  timestamp_util.h  timestamp_util_test.cc
src/platform2/bootlockbox/: BUILD.gn  DIR_METADATA  OWNERS  README.md  boot_lockbox_client.cc  boot_lockbox_client.h  boot_lockbox_dbus_adaptor.cc  boot_lockbox_dbus_adaptor.h  boot_lockbox_service.cc  boot_lockbox_service.h  boot_lockbox_service_test.cc  boot_lockbox_tool.cc  boot_lockboxd.cc  fake_hwsec_space.cc  fake_hwsec_space.h  hwsec_space.h  hwsec_space_impl.cc  hwsec_space_impl.h  hwsec_space_impl_test.cc  key_value_map.proto  metrics.cc  metrics.h  mock_nvram_boot_lockbox.h  nvram_boot_lockbox.cc  nvram_boot_lockbox.h  nvram_boot_lockbox_test.cc  org.chromium.BootLockbox.conf
src/platform2/bootstat/: BUILD.gn  OWNERS  README.md  bootstat.cc  bootstat.h  bootstat_archive  bootstat_get_last  bootstat_log.cc  bootstat_summary  bootstat_test.cc
src/platform2/camera/: .presubmitignore  DIR_METADATA  OWNERS  OWNERS.config  README.md  pylintrc
src/platform2/cecservice/: BUILD.gn  OWNERS  README.md  cec_device.cc  cec_device.h  cec_device_mock.h  cec_device_test.cc  cec_fd.cc  cec_fd.h  cec_fd_mock.h  cec_manager.cc  cec_manager.h  cec_manager_test.cc  cecservice_dbus_adaptor.cc  cecservice_dbus_adaptor.h  main.cc  udev.cc  udev.h  udev_mock.h
src/platform2/cfm-dfu-notification/: BUILD.gn  OWNERS  README.md  cfm_dfu_notification.pc.in  dfu_log_notification.cc  dfu_log_notification.h  dfu_log_notification_test.cc  idfu_notification.cc  idfu_notification.h  platform2_preinstall.sh
src/platform2/chaps/: BUILD.gn  CPPLINT.cfg  OWNERS  README.md  attributes.cc  attributes.h  attributes.proto  attributes_fuzzer.cc  chaps.cc  chaps.h  chaps_adaptor.cc  chaps_adaptor.h  chaps_client.cc  chaps_factory.h  chaps_factory_impl.cc  chaps_factory_impl.h  chaps_factory_mock.cc  chaps_factory_mock.h  chaps_interface.h  chaps_metrics.cc  chaps_metrics.h  chaps_metrics_test.cc  chaps_proxy.cc  chaps_proxy.h  chaps_proxy_mock.h  chaps_service.cc  chaps_service.h  chaps_service_test.cc  chaps_test.cc  chaps_utility.cc  chaps_utility.h  chaps_utility_fuzzer.cc  chapsd.cc  chapsd_test.cc  handle_generator.h  handle_generator_mock.h  isolate.h  isolate_chromeos.cc  isolate_linux.cc  isolate_mock.h  (+74 more)
src/platform2/chargesplash/: BUILD.gn  DIR_METADATA  OWNERS  README.md  frecon.cc  frecon.h  frecon_test.cc  main.cc  test_util.cc  test_util.h
src/platform2/chromeos-common-script/: README.md
src/platform2/chromeos-config/: .gitignore  BUILD.gn  DIR_METADATA  OWNERS  README.md  cros_config_main.cc  cros_config_mock.sh  libcros_config.pc.in  platform2_preinstall.sh  regen.sh  run_tests.sh  setup.py
src/platform2/chromeos-dbus-bindings/: Cargo.toml  README.md
src/platform2/chromeos-nvt-tcon-updater/: OWNERS  README.md
src/platform2/codelab/: BUILD.gn  OWNERS  README.md  codelab.cc  codelab.h  codelab_test.cc  main.cc
src/platform2/common-mk/: BUILD.gn  BUILDCONFIG.gn  arg_prefix_filter_wrapper.py  args_generator_wrapper.py  check-dir-metadata.py  check-mojom.py  check-owners.py  check-readme.py  check-source-files-included.py  check-synced-protos.py  common.mk  common_utils.py  cxxbridge.gni  deps.gni  ebuild_function.py  ebuild_function_unittest.py  file_generator_wrapper.py  flatbuffer.gni  generate-dbus-adaptors.gni  generate-dbus-proxies.gni  generate-pc.py  generate_pc_file.sh  generated_dbus_header_diff.py  install_config.gni  install_seccomp_policy.gni  meson_test.py  mojom_bindings_generator.gni  mojom_bindings_generator_wrapper.py  mojom_type_mappings_generator.gni  openssl_pem.gni  pkg-config_wrapper.py  (+10 more)
(+17031 files in other folders)
