# Copyright 2018 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

buildconfig = "//common-mk/BUILDCONFIG.gn"
root = "//common-mk/gn_root/:"

# This makes all scripts run by gn respect the shebang setting of the script.
# Otherwise, the default is to always use `python`.
script_executable = "/usr/bin/env"
